--- a/index.html
+++ b/index.html
@@ -4,9 +4,84 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="/styles/reset.css" />
+    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="/styles/index.css" />
+
     <title>Icaro Andrade - Floripa Mais Tec</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <header></header>
+
+    <main>
+      <section>
+        <h4><strong>Hello World</strong></h4>
+        <h5>
+          O objetivo desse site é postar os exercícios do Floripa Mais Tec.
+        </h5>
+      </section>
+      <section class="card">
+        <div class="container">
+          <img class="avatar" src="https://github.com/inb4iba.png" alt="" />
+          <div class="personal">
+            <div class="personal-data">
+              <h1>Icaro Andrade</h1>
+              <p><span id="age"></span> anos</p>
+            </div>
+            <p>
+              <strong>Hobbies:</strong> Jogos e cultura pop no geral (séries,
+              filmes, animes, etc)
+            </p>
+            <div>
+              <p>
+                <strong>Interesse na área:</strong> Desde muito novo me vi
+                imerso no mundo dos videogames e ainda criança veio a ambição de
+                um dia fazer parte desta indústria. Meu primeiro contato com
+                programação foi uma linguagem de scripts brasileira chamada LUA,
+                onde desenvolvi servidores não oficiais de jogos online para
+                jogar com amigos. Após isso ingressei em uma faculdade de
+                desenvolvimento de jogos que aí sim obtive um maior contato com
+                programação (mas infelizmente não consegui concluir).
+              </p>
+            </div>
+          </div>
+        </div>
+        <hr />
+        <div class="quote">
+          <cite>Nós vamos vencer. Porque não há outra opção.</cite>
+        </div>
+        <hr />
+        <div class="links">
+          <a href="https://www.linkedin.com/in/icaro-andrade-b866336b/">
+            <img
+              class="social"
+              src="https://cdn-icons-png.flaticon.com/512/174/174857.png"
+            />
+            Linkedin</a
+          >
+          <a href="https://github.com/inb4iba">
+            <img
+              class="social"
+              src="https://cdn-icons-png.flaticon.com/512/25/25231.png"
+            />
+            Github</a
+          >
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <span> Site desenvolvido e mantido por Icaro Andrade </span>
+    </footer>
+
+    <script src="/scripts/index.js"></script>
   </body>
 </html>
