add nav to header

--- a/index.html
+++ b/index.html
@@ -19,7 +19,15 @@
     <title>Icaro Andrade - Floripa Mais Tec</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <nav>
+        <ul>
+          <a href=""><li>Módulo 01</li></a>
+          <a href=""><li>Módulo 02</li></a>
+          <a href=""><li>Módulo 03</li></a>
+        </ul>
+      </nav>
+    </header>
 
     <main>
       <section>
@@ -59,15 +67,18 @@
           <cite>Nós vamos vencer. Porque não há outra opção.</cite>
         </div>
         <hr />
-        <div class="links">
-          <a href="https://www.linkedin.com/in/icaro-andrade-b866336b/">
+        <div class="socials">
+          <a
+            class="card-link"
+            href="https://www.linkedin.com/in/icaro-andrade-b866336b/"
+          >
             <img
               class="social"
               src="https://cdn-icons-png.flaticon.com/512/174/174857.png"
             />
             Linkedin</a
           >
-          <a href="https://github.com/inb4iba">
+          <a class="card-link" href="https://github.com/inb4iba">
             <img
               class="social"
               src="https://cdn-icons-png.flaticon.com/512/25/25231.png"
