--- a/index.html
+++ b/index.html
@@ -22,9 +22,15 @@
     <header>
       <nav>
         <ul>
-          <a href=""><li>Módulo 01</li></a>
-          <a href=""><li>Módulo 02</li></a>
-          <a href=""><li>Módulo 03</li></a>
+          <a href="/pages/module-01/module-01.html"
+            ><li>Módulo 01 - FrontEnd</li></a
+          >
+          <a href="/pages/module-02/module-02.html"
+            ><li>Módulo 02 - BackEnd</li></a
+          >
+          <a href="pages/module-03/module-03.html"
+            ><li>Módulo 03 - FullStack</li></a
+          >
         </ul>
       </nav>
     </header>
