--- a/index.html
+++ b/index.html
@@ -22,20 +22,18 @@
     <header>
       <nav>
         <ul>
-          <a href="/pages/module-01/module-01.html"
+          <a href="/pages/module-01/index.html"
             ><li>Módulo 01 - FrontEnd</li></a
           >
-          <a href="/pages/module-02/module-02.html"
-            ><li>Módulo 02 - BackEnd</li></a
-          >
-          <a href="pages/module-03/module-03.html"
+          <a href="/pages/module-02/index.html"><li>Módulo 02 - BackEnd</li></a>
+          <a href="pages/module-03/index.html"
             ><li>Módulo 03 - FullStack</li></a
           >
         </ul>
       </nav>
     </header>
 
-    <main>
+    <main class="main-container">
       <section>
         <h4><strong>Hello World</strong></h4>
         <h5>
@@ -82,15 +80,13 @@
               class="social"
               src="https://cdn-icons-png.flaticon.com/512/174/174857.png"
             />
-            Linkedin</a
-          >
+          </a>
           <a class="card-link" href="https://github.com/inb4iba">
             <img
               class="social"
               src="https://cdn-icons-png.flaticon.com/512/25/25231.png"
             />
-            Github</a
-          >
+          </a>
         </div>
       </section>
     </main>
