fix all links and add menu to modules 2 and 3

--- a/pages/module-01/index.html
+++ b/pages/module-01/index.html
@@ -23,10 +23,8 @@
       <nav>
         <ul>
           <a href="../../index.html"><li>Home</li></a>
-          <a href="../module-02/module-02.html"><li>Módulo 02 - BackEnd</li></a>
-          <a href="../module-03/module-03.html"
-            ><li>Módulo 03 - FullStack</li></a
-          >
+          <a href="../module-02/index.html"><li>Módulo 02 - BackEnd</li></a>
+          <a href="../module-03/index.html"><li>Módulo 03 - FullStack</li></a>
         </ul>
       </nav>
     </header>
