--- a/pages/module-01/week-01/exercise-01.html
+++ b/pages/module-01/week-01/exercise-01.html
@@ -78,7 +78,7 @@
       <section class="exercise-01-section" id="resume">
         <div class="header">
           <img class="avatar" src="https://github.com/inb4iba.png" />
-          <h2>Icaro Belico de Andrade</h2>
+          <h2>Icaro B. de Andrade</h2>
         </div>
         <h5>Resumo</h5>
         <p>
