--- a/pages/module-02/index.html
+++ b/pages/module-02/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="../../styles/reset.css" />
+    <link rel="stylesheet" href="../../styles/main.css" />
+
     <title>Módulo 02 - BackEnd</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+          <a href="../../index.html"><li>Home</li></a>
+          <a href="../module-01/index.html"><li>Módulo 01 - FrontEnd</li></a>
+          <a href="../module-03/index.html"><li>Módulo 03 - FullStack</li></a>
+        </ul>
+      </nav>
+    </header>
     <h1>Módulo 02 - BackEnd</h1>
+    <footer>
+      <span> Site desenvolvido e mantido por Icaro Andrade </span>
+    </footer>
   </body>
 </html>
