added first week exercises

--- a/pages/module-01/index.html
+++ b/pages/module-01/index.html
@@ -50,7 +50,7 @@
         <section id="about">
           <h1>Módulo 01 - Front-End</h1>
           <p>
-            Um desenvolvedor front-end é o responsável pela desenvolvimento das
+            Um desenvolvedor front-end é o responsável pelo desenvolvimento das
             partes visuais e de interatividade de uma aplicação, assim sendo,
             ele é quem cuidará das partes que o usuário final irá interagir.
           </p>
