--- a/pages/module-01/week-02/exercise-01.html
+++ b/pages/module-01/week-02/exercise-01.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <body>
-    <h4>Isso é um teste!!!</h4>
+    <h4>Discursivas</h4>
+    <blockquote>
+      <h6>Descrição do exercício:</h6>
+      <ol>
+        <li>
+          Com suas palavras descreva a relação entre ECMAScript e JavaScript.
+          Escreva da maneira que você considerar mais fácil a diferença entre as
+          linguagens Javascript e ECMAScript.
+        </li>
+        <li>
+          Explique brevemente o método “console.log()”. Explique a sintaxe do
+          método console.log() e o que ele faz.
+        </li>
+      </ol>
+    </blockquote>
+    <hr />
   </body>
 </html>
