--- a/pages/module-01/week-02/exercise-02.html
+++ b/pages/module-01/week-02/exercise-02.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <body>
-    <h4>Isso é um teste!!!</h4>
+    <h4>Variáveis + Template Literals</h4>
+    <blockquote>
+      <h6>Descrição do exercício:</h6>
+      <ul>
+        <li>
+          Seguindo os padrões de nomenclatura, crie uma variável do tipo Number
+          e outra do tipo String.
+        </li>
+        <li>
+          Crie uma ou mais variáveis e use estas em uma String por meio de
+          concatenação ou Template Literal;
+        </li>
+      </ul>
+    </blockquote>
+    <hr />
   </body>
 </html>
