--- a/pages/module-01/week-02/exercise-03.html
+++ b/pages/module-01/week-02/exercise-03.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <body>
-    <h4>Isso é um teste!!!</h4>
+    <h4>Arrays</h4>
+    <blockquote>
+      <h6>Descrição do exercício:</h6>
+      <ul>
+        <li>Crie um cenário onde seria útil o uso de arrays em Javascript;</li>
+        <li>
+          O tipo de objeto array é muito usado em Javascript pois permite que
+          trabalhemos com listagens. Exemplifique uma situação em que você
+          usaria array.
+        </li>
+      </ul>
+    </blockquote>
+    <hr />
   </body>
 </html>
