--- a/pages/module-01/week-02/exercise-04.html
+++ b/pages/module-01/week-02/exercise-04.html
@@ -1,6 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <body>
-    <h4>Isso é um teste!!!</h4>
+    <h4>Operadores Lógicos</h4>
+    <blockquote>
+      <h6>Descrição do exercício:</h6>
+      <ul>
+        <li>Resolva o problema abaixo com JavaScript.</li>
+        <li>
+          Um evento de tecnologia está acontecendo na cidade e você fará o
+          sistema para gerir a venda de ingressos. A regra é a seguinte:
+          mulheres pagam R$ 50 reais na entrada, enquanto homens pagam R$ 80
+          reais, para pessoas com mais de 60 anos ou estudantes do LAB365 a
+          entrada é gratuita mas se a pessoa for menor de idade e não for
+          estudante de programação não deve entrar;
+        </li>
+        <li>
+          Nesse exercício você fará uso de operadores lógicos, condicionais
+          if/else;
+        </li>
+      </ul>
+    </blockquote>
+    <hr />
   </body>
 </html>
