--- a/pages/module-01/week-02/exercise-05.html
+++ b/pages/module-01/week-02/exercise-05.html
@@ -1,6 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <body>
-    <h4>Isso é um teste!!!</h4>
+    <h4>Operadores de atribuição e estruturas de repetição</h4>
+    <blockquote>
+      <h6>Descrição do exercício:</h6>
+      <ul>
+        <li>
+          Crie um programa com JavaScript que a partir de um salário inicial,
+          calcule quantos meses será necessário para atingir uma meta salarial
+          recebendo um aumento a cada 6 meses equivalente a 10% no salário
+          corrente.
+        </li>
+        <li>
+          Para executar esse exercício você provavelmente vai precisar saber
+          usar: estrutura de repetição, estrutura condicional, operador
+          Remainder (%), operadores aritméticos (divisão, multiplicação e soma);
+        </li>
+        <li>Um adicional será formatar o valor numérico para real.</li>
+      </ul>
+    </blockquote>
+    <hr />
   </body>
 </html>
