add week 2 exercises 1 and 2

--- a/pages/module-01/week-02/exercise-01.html
+++ b/pages/module-01/week-02/exercise-01.html
@@ -17,5 +17,25 @@
       </ol>
     </blockquote>
     <hr />
+    <blockquote>
+      <h6>Respostas:</h6>
+      <ol>
+        <li>
+          ECMAScript nada mais é do que o Javascript padronizado pela ECMA
+          (European Computer Manufacturers Association), essa padronização
+          aconteceu quando a Netscape enviou para eles, com o intuito de que os
+          navegadores fossem padronizados. A diferença entre as 2 linguagens
+          além do nome, é que o ECMAScript seria a especificação, contendo
+          diversas funcionalidades exclusivas e o Javascript seria a linguagem
+          base dessa implementação.
+        </li>
+        <li>
+          O método console.log() imprimi no console os valores passados. No caso
+          da sintaxe, chamamos a função log do objeto console, nele podemos
+          passar qualquer tipo de dado, inclusive podemos mandar diversos dados
+          separados por vírgulas.
+        </li>
+      </ol>
+    </blockquote>
   </body>
 </html>
