--- a/pages/module-01/week-02/exercise-02.html
+++ b/pages/module-01/week-02/exercise-02.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head> </head>
   <body>
     <h4>Variáveis + Template Literals</h4>
     <blockquote>
@@ -16,5 +17,36 @@
       </ul>
     </blockquote>
     <hr />
+    <div class="code">
+      <p>
+        <span class="code-reserved">let</span> thisIsAString =
+        <span class="code-str">"Isso é uma string"</span>;
+      </p>
+      <p>
+        <span class="code-reserved">let</span> numberOneTwoThree =
+        <span class="code-number">123</span>;
+      </p>
+      <br />
+      <p>
+        console.<span class="code-fn">log</span>(<span class="code-str"
+          >`Variável 1:</span
+        >
+        <span class="code-reserved">${</span>thisIsAString<span
+          class="code-reserved"
+          >}</span
+        ><span class="code-str"> | Variável 2: </span>
+        <span class="code-reserved">${</span>numberOneTwoThree<span
+          class="code-reserved"
+          >}</span
+        ><span class="code-str">`</span>);
+      </p>
+      <br />
+      <p>
+        <span class="code-comment"
+          >//Resultado do console: Variável 1: Isso é uma string | Variável 2:
+          123</span
+        >
+      </p>
+    </div>
   </body>
 </html>
