--- a/pages/module-01/week-02/exercise-03.html
+++ b/pages/module-01/week-02/exercise-03.html
@@ -17,7 +17,7 @@
     <blockquote>
       <h6>Descrição do exercício:</h6>
       <ul>
-        <li>Crie um cenário onde seria útil o uso de arrays em Javascript;</li>
+        <li>Crie um cenário onde seria útil o uso de arrays em Javascript.</li>
         <li>
           O tipo de objeto array é muito usado em Javascript pois permite que
           trabalhemos com listagens. Exemplifique uma situação em que você
